--- a/src/App.css
+++ b/src/App.css
@@ -38,7 +38,9 @@
 }
 
 /* body{
-  background-color: blue;
+  display: flex;
+  min-height:100%;
+
 } */
 
 section{
@@ -51,10 +53,10 @@ li{
   list-style:none;
 }
 
-nav{
+/* nav{
   overflow:hidden;
-  /* position:fixed; */
-}
+  position:fixed;
+} */
 
 h4{
   text-decoration:none;
@@ -65,4 +67,17 @@ h4{
   display:flex;
   justify-content:space-around;
   width: 100%;
+}
+
+.topNav{
+  position: fixed;
+  width: 100%;
+}
+.bottomNav {
+  position: fixed;
+  bottom:0;
+  width: 100%;
+}
+.fas{
+color:white;
 }
