--- a/src/App.css
+++ b/src/App.css
@@ -37,11 +37,10 @@
   }
 }
 
-/* body{
-  display: flex;
-  min-height:100%;
+html{
+  background-color:#EFF0F1;
 
-} */
+}
 
 section{
   height:500px;
@@ -73,6 +72,10 @@ h4{
   position: fixed;
   width: 100%;
 }
+.fab{
+  color:white;
+  font-size: 40px;;
+}
 .bottomNav {
   position: fixed;
   bottom:0;
@@ -80,4 +83,40 @@ h4{
 }
 .fas{
 color:white;
+}
+
+ul {
+  color:black;
+  margin-right:15%;
+  margin-left:15%;
+  text-align:center;
+  padding-right:10%;
+  padding-left:10%;
+  font-family:arial;
+  background-color:#EFF0F1;
+}
+ section {
+   padding-top:50px;
+ }
+#name {
+  font-size:16px;
+  text-align:left;
+  margin:0;
+  text-transform: capitalize;
+  font-weight: 900;
+}
+i{
+  z-index:10;
+  text-align:left;
+  color:black;
+} 
+.fa-hand-spock {
+  color:black;
+}
+
+ul>fas {
+  color:black;
+}
+button {
+  height:50px;
 }
