added a form to feed

--- a/src/App.css
+++ b/src/App.css
@@ -122,4 +122,11 @@ ul>fas {
 button {
   height:50px;
 }
-
+.tablet{
+  display:none;
+}
+@media(min-width:320px){
+  .tablet{
+    display: block;
+  }
+}
